test/parsing/errors/sparse-subdomain-wrong-arg-count.chpl
const dom = {1..10, 1..10};
var x: [0..1] sparse subdomain(dom, stridable=true);
var x: [0..1] sparse subdomain();
var s: sparse subdomain({1..2}, {3..4});
