test/parsing/errors/sparse-subdomain-wrong-arg-count.good
sparse-subdomain-wrong-arg-count.chpl:2: error: the 'sparse subdomain' expression expects exactly one argument (the parent domain)
sparse-subdomain-wrong-arg-count.chpl:3: error: the 'sparse subdomain' expression expects exactly one argument (the parent domain)
sparse-subdomain-wrong-arg-count.chpl:4: error: the 'sparse subdomain' expression expects exactly one argument (the parent domain)
